[gd_scene load_steps=3 format=3 uid="uid://captain_creation"]

[ext_resource type="Theme" uid="uid://ddjoduj1ya6tp" path="res://assets/5PFH.tres" id="1_theme"]
[ext_resource type="Script" path="res://Resources/CrewAndCharacters/CaptainCreation.gd" id="1_script"]

[node name="CaptainCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Create Your Captain"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="MainContainer/LeftPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter Captain's Name"

[node name="BackgroundLabel" type="Label" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Select Background"

[node name="BackgroundOption" type="OptionButton" parent="MainContainer/LeftPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="StatLabel" type="Label" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Allocate Stats"

[node name="StatContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator3" type="HSeparator" parent="MainContainer/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="MainContainer/LeftPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Confirm Captain"

[node name="RightPanel" type="PanelContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainContainer/RightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Captain Preview"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/RightPanel/VBoxContainer"]
layout_mode = 2

[node name="PreviewLabel" type="RichTextLabel" parent="MainContainer/RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Create your captain by:
1. Entering a name
2. Selecting a background
3. Allocating stat points

Your captain will lead your crew through the campaign." 